fix combobox jumping when not in portal

--- a/apps/theme/src/app/components/Previews/Components/Components.module.css
+++ b/apps/theme/src/app/components/Previews/Components/Components.module.css
@@ -178,3 +178,9 @@
   gap: 26px;
   flex-direction: column;
 }
+
+.toggleCombo {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ds-spacing-2);
+}
